--- a/src/main/resources/oceanabbyResources/localization/eng/Relicstrings.json
+++ b/src/main/resources/oceanabbyResources/localization/eng/Relicstrings.json
@@ -66,7 +66,7 @@
     "NAME": "Perfected Catalyst",
     "FLAVOR": "Our research has only just begun...",
     "DESCRIPTIONS": [
-      ""
+      "Replaces #pMutation #pCatalyst."
     ]
   }
 }
