one mutation working

--- a/src/main/resources/oceanabbyResources/localization/eng/Cardstrings.json
+++ b/src/main/resources/oceanabbyResources/localization/eng/Cardstrings.json
@@ -329,6 +329,6 @@
   },
   "${ModID}:WrithingTentacles": {
     "NAME": "Writhing Tentacles",
-    "DESCRIPTION": ""
+    "DESCRIPTION": "Deal !D! damage. NL ${ModID}:Mutate a random card in your hand."
   }
 }
