--- a/src/main/resources/oceanabbyResources/localization/eng/UIstrings.json
+++ b/src/main/resources/oceanabbyResources/localization/eng/UIstrings.json
@@ -1,7 +1,8 @@
 {
     "${ModID}:Mutations": {
         "TEXT_DICT": {
-            "${ModID}:Conjoined": "Duplicate|Plays twice."
+            "${ModID}:Conjoined": "Conjoined|Plays twice.",
+            "${ModID}:Spinning": "Spinning|Grants !P! #yBlock.|block"
         }
     }
 }
