--- a/src/main/resources/oceanabbyResources/localization/eng/Cardstrings.json
+++ b/src/main/resources/oceanabbyResources/localization/eng/Cardstrings.json
@@ -19,7 +19,7 @@
   },
   "${ModID}:Strike": {
     "NAME": "Strike",
-    "DESCRIPTION": "Deal !D! damage.{!${ModID}:EVO!|1= NL Gain !B! Block.}"
+    "DESCRIPTION": "Deal !D! damage.{!${ModID}:EVO!|>0= NL Gain !B! Block.}"
   },
   "${ModID}:Defend": {
     "NAME": "Defend",
@@ -135,7 +135,7 @@
   },
   "${ModID}:ForcedEvolution": {
     "NAME": "Forced Evolution",
-    "DESCRIPTION": "Draw !M! cards. NL {!${ModID}:EVO!|1= Upgrade and} ${ModID}:Evo them."
+    "DESCRIPTION": "Draw !M! cards. NL {!${ModID}:EVO!|>0= Upgrade and} ${ModID}:Evo them."
   },
   "${ModID}:GetOut": {
     "NAME": "Get Out",
