--- a/src/main/resources/oceanabbyResources/localization/eng/UIstrings.json
+++ b/src/main/resources/oceanabbyResources/localization/eng/UIstrings.json
@@ -10,5 +10,11 @@
         "TEXT": [
             "View Evo"
         ]
+    },
+    "${ModID}:SelectCardInHandToEvo": {
+        "TEXT": [
+            "Evo",
+            "Evo and Upgrade"
+        ]
     }
 }
