emergency guide + paper dragyn

--- a/src/main/resources/oceanabbyResources/localization/eng/Cardstrings.json
+++ b/src/main/resources/oceanabbyResources/localization/eng/Cardstrings.json
@@ -191,7 +191,15 @@
   },
   "${ModID}:Marrow": {
     "NAME": "Marrow",
-    "DESCRIPTION": ""
+    "DESCRIPTION": "Deal !D! damage."
+  },
+  "${ModID}:ChargedMarrow": {
+    "NAME": "Charged Marrow",
+    "DESCRIPTION": "Deal !D! damage. NL Gain{!M!|repeat= [E]}."
+  },
+  "${ModID}:ShiningMarrow": {
+    "NAME": "Shiny Marrow",
+    "DESCRIPTION": "Deal !D! damage. NL Draw !M! card{!M!|>1=s}."
   },
   "${ModID}:MeatShield": {
     "NAME": "Meat Shield",
