--- a/src/main/resources/oceanabbyResources/localization/eng/Relicstrings.json
+++ b/src/main/resources/oceanabbyResources/localization/eng/Relicstrings.json
@@ -34,6 +34,7 @@
     "NAME": "The Symbiont",
     "FLAVOR": "Despite its hideous appearance, it is nothing but a well-needed friend.",
     "DESCRIPTIONS": [
+      "Eats the next relic you obtain. At the start of your turn, if this relic is not hungry, gain [E] .",
       "Eats the next #b",
       " relics you obtain. At the start of your turn, if this relic is not hungry, gain [E] ."
     ]
@@ -49,8 +50,9 @@
     "NAME": "Emergency Guide",
     "FLAVOR": "It's from the lab you escaped from. Describes protocol in the event of a containment breach",
     "DESCRIPTIONS": [
+      "At the start of each combat, shuffle #b1 #yCharged #yMarrow+ into your draw pile.",
       "At the start of each combat, shuffle #b",
-      " #yMarrows+ which grant [E] into your draw pile."
+      " #yCharged #yMarrows+ into your draw pile."
     ]
   },
   "${ModID}:EldritchHieroglyphs": {
